--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.4s">
 				    <hr class="line purple">
 				    <h3>App Feature One Here</h3>
-				    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. TESTESTESTESTESTES Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
+				    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. TESTESTESTESTESTES TESTETSTETSTESTETSTETSTETSTETSTESTETSTE Aliquam viverra orci ut est facilisis, eu elementum mi volutpat. Pellentesque ac tristique nisi.</p>
 			    </div>
 			    <div class="col-sm-4 wow fadeIn" data-wow-delay="0.8s">
 				    <hr  class="line blue">
